--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "date-fns": "^2.30.0",
     "nanoid": "^5.0.3",
+    "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
